--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
+    "bootstrap": "^4.2.1",
     "react": "^16.7.0",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-datepicker": "^2.1.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
