--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-swipeable": "^4.3.2",
+    "react-swipeable-views": "^0.13.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
