--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "2.1.3",
     "react-swipeable": "^4.3.2",
     "react-swipeable-views": "^0.13.1",
+    "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
